modified covid19 index.html

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -119,16 +119,16 @@
       </div>
 
       <!-- main section -->
-      <!-- <main>
+      <main>
         <div class="content">
-          <h1 class="title">What is COVID-19?</h1>
+          <!-- <h1 class="title">What is COVID-19?</h1>
           <br>
           <p>
             COVID-19 is the disease caused by a new coronavirus called SARS-CoV-2. WHO first learned of this new virus on 31
             December 2019, following a report of a cluster of cases of ‘viral pneumonia’ in Wuhan, People’s Republic of China.
-          </p>
+          </p> -->
         </div>
-      </main> -->
+      </main>
 
     </div>
   </div>
