--- a/covid19/index.html
+++ b/covid19/index.html
@@ -38,7 +38,7 @@
                   <div class="dropdown">
                     <ul>
                       <li class="dropdown-link">
-                        <a href="#">Symptoms</a>
+                        <a href="symptoms.html">Symptoms</a>
                       </li>
                       <li class="dropdown-link">
                         <a href="#">Transmission</a>
@@ -108,25 +108,26 @@
           <div class="notes">
             <h1><mark>What is COVID-19?</mark></h1>
             <p>
-              COVID-19 is the disease caused by a new coronavirus called SARS-CoV-2. WHO first learned of this new virus on 31
-              December 2019, following a report of a cluster of cases of ‘viral pneumonia’ in Wuhan, People’s Republic of China.
+              COVID-19 is the disease caused by a new coronavirus called SARS-CoV-2. WHO first learned of this new virus on 31 December 2019, following a report of a cluster of cases of ‘viral pneumonia’ in Wuhan, People’s Republic of China.
             </p>
           </div>
           <div class="picture">
-            <img src="../img/pic/5.jpg" alt="Sea shells">
+            <img src="img/virus-1024x680.png" alt="COVID-19 Virus - Photo by Diocese of Altoona-Johnstown">
           </div>
         </div>
       </div>
 
       <!-- main section -->
       <main>
-        <div class="content">
-          <!-- <h1 class="title">What is COVID-19?</h1>
-          <br>
-          <p>
-            COVID-19 is the disease caused by a new coronavirus called SARS-CoV-2. WHO first learned of this new virus on 31
-            December 2019, following a report of a cluster of cases of ‘viral pneumonia’ in Wuhan, People’s Republic of China.
-          </p> -->
+        <div class="content d-inline-flex pl-10">
+          <h4>Read more:</h4>
+          <ul class="d-inline-flex">
+            <li><a href="symptoms.html">Symptoms</a></li>
+            <li><a href="#">Transmission</a></li>
+            <li><a href="#">Prevention</a></li>
+            <li><a href="#">First Aid</a></li>
+            <li><a href="#">Procedures</a></li>
+          </ul>
         </div>
       </main>
 
@@ -136,8 +137,8 @@
   <!-- footer section -->
   <footer>
     <strong>© 2020 Anti-Covid19 Social Club. All rights reserved.</strong><br>
-    Created with <img src="../img/fontawesome/svg/heart.svg" alt="heart" width="15px"> by <a href="https://mksalada.webnode.com/" target="_blank" rel="noopener noreferrer">Maria Kristina Salada</a><br>
-    <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License. This work is licensed Attribution-NonCommercial 4.0 International License." style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a>
+    Created with <img src="../img/fontawesome/svg/heart.svg" alt="heart" width="15px"> by <a href="https://mksalada.webnode.com/" target="_blank" rel="noopener noreferrer">M.K. Salada</a><br>
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="This work is licensed Attribution-NonCommercial 4.0 International License." style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a>
   </footer>
 </body>
 </html>
