--- a/covid19/symptoms.html
+++ b/covid19/symptoms.html
@@ -41,7 +41,7 @@
                         <a href="">Symptoms</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="#">Transmission</a>
+                        <a href="transmission.html">Transmission</a>
                       </li>
                       <li class="dropdown-link">
                         <a href="#">Prevention</a>
@@ -108,22 +108,65 @@
           <div class="notes">
             <h1><mark>What are the symptoms of COVID-19 virus?</mark></h1>
             <p>
-              COVID-19 is the disease caused by a new coronavirus called SARS-CoV-2. WHO first learned of this new virus on 31 December 2019, following a report of a cluster of cases of ‘viral pneumonia’ in Wuhan, People’s Republic of China.
+              On average it takes 5–6 days from when someone is infected with the virus for symptoms to show, however it can take up to 14 days. Below are the early smptoms of Covid-19 virus.
             </p>
           </div>
           <div class="picture">
-            <img src="img/virus-1024x680.png" alt="COVID-19 Virus - Photo by Diocese of Altoona-Johnstown">
+            <img src="img/fever_custom-255ad6067b99013fe8b1173ffdfb0bfc60c8150b-s800-c85.jpg" alt="COVID-19 Virus Symptoms - Photo by npr.org">
           </div>
         </div>
       </div>
 
       <!-- main section -->
       <main>
+        <div class="content">
+          <p>
+            COVID-19 affects different people in different ways. Most infected people will develop mild to moderate illness and
+            recover without hospitalization.
+          </p>
+          <br>
+          <h3>Most common symptoms:</h3>
+          <ul class="list">
+            <li>fever</li>
+            <li>dry cough</li>
+            <li>tiredness</li>
+          </ul>
+          <br>
+          <h3>Less common symptoms:</h3>
+          <ul class="list">
+            <li>aches and pains</li>
+            <li>sore throat</li>
+            <li>diarrhoea</li>
+            <li>conjunctivitis</li>
+            <li>headache</li>
+            <li>loss of taste or smell</li>
+            <li>a rash on skin, or discolouration of fingers or toes</li>
+          </ul>
+          <br>
+          <h3>Serious symptoms:</h3>
+          <ul class="list">
+            <li>difficulty breathing or shortness of breath</li>
+            <li>chest pain or pressure</li>
+            <li>loss of speech or movement</li>
+          </ul>
+          <br>
+          <p>
+            Seek immediate medical attention if you have serious symptoms. Always call before visiting your doctor or health
+            facility.
+          </p>
+          <br>
+          <p>
+            People with mild symptoms who are otherwise healthy should manage their symptoms at home.
+          </p>
+          <br>
+          <h6>For informational purposes only. Consult your local medical authority for advice.</h6>
+        </div>
+        <br><br>
         <div class="content d-inline-flex pl-10">
           <h4>Read more:</h4>
           <ul class="d-inline-flex">
             <li><a href="index.html">About Covid-19</a></li>
-            <li><a href="#">Transmission</a></li>
+            <li><a href="transmission.html">Transmission</a></li>
             <li><a href="#">Prevention</a></li>
             <li><a href="#">First Aid</a></li>
             <li><a href="#">Procedures</a></li>
