--- a/covid19/index.html
+++ b/covid19/index.html
@@ -41,7 +41,7 @@
                         <a href="symptoms.html">Symptoms</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="#">Transmission</a>
+                        <a href="transmission.html">Transmission</a>
                       </li>
                       <li class="dropdown-link">
                         <a href="#">Prevention</a>
@@ -119,11 +119,25 @@
 
       <!-- main section -->
       <main>
+        <div class="content">
+          <h2>Overview</h2>
+          <br>
+          <p>
+            Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.
+          </p>
+          <br>
+          <p>
+            Most people who fall sick with COVID-19 will experience mild to moderate symptoms and recover without special treatment.
+          </p>
+          <br>
+          <h6>For informational purposes only. Consult your local medical authority for advice.</h6>
+        </div>
+        <br><br>
         <div class="content d-inline-flex pl-10">
           <h4>Read more:</h4>
           <ul class="d-inline-flex">
             <li><a href="symptoms.html">Symptoms</a></li>
-            <li><a href="#">Transmission</a></li>
+            <li><a href="transmission.html">Transmission</a></li>
             <li><a href="#">Prevention</a></li>
             <li><a href="#">First Aid</a></li>
             <li><a href="#">Procedures</a></li>
