--- a/covid19/symptoms.html
+++ b/covid19/symptoms.html
@@ -44,10 +44,10 @@
                         <a href="transmission.html">Transmission</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="#">Prevention</a>
+                        <a href="prevention.html">Prevention</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="#">First Aid</a>
+                        <a href="first-aid.html">First Aid</a>
                       </li>
                       <li class="dropdown-link">
                         <a href="#">Procedures</a>
@@ -121,18 +121,17 @@
       <main>
         <div class="content">
           <p>
-            COVID-19 affects different people in different ways. Most infected people will develop mild to moderate illness and
-            recover without hospitalization.
+            COVID-19 affects different people in different ways. Most infected people will develop mild to moderate illness and recover without hospitalization.
           </p>
           <br>
-          <h3>Most common symptoms:</h3>
+          <p>Most common symptoms:</p>
           <ul class="list">
             <li>fever</li>
             <li>dry cough</li>
             <li>tiredness</li>
           </ul>
           <br>
-          <h3>Less common symptoms:</h3>
+          <p>Less common symptoms:</p>
           <ul class="list">
             <li>aches and pains</li>
             <li>sore throat</li>
@@ -143,7 +142,7 @@
             <li>a rash on skin, or discolouration of fingers or toes</li>
           </ul>
           <br>
-          <h3>Serious symptoms:</h3>
+          <p>Serious symptoms:</p>
           <ul class="list">
             <li>difficulty breathing or shortness of breath</li>
             <li>chest pain or pressure</li>
@@ -151,12 +150,37 @@
           </ul>
           <br>
           <p>
-            Seek immediate medical attention if you have serious symptoms. Always call before visiting your doctor or health
-            facility.
+            Seek immediate medical attention if you have serious symptoms. Always call before visiting your doctor or health facility.
+          </p>
+          <br>
+          <p>People with mild symptoms who are otherwise healthy should manage their symptoms at home.</p>
+          <br>
+          <h3>What happens to people who get COVID-19?</h3>
+          <br>
+          <p>
+            Among those who develop symptoms, most (about 80%) recover from the disease without needing hospital treatment. About 15% become seriously ill and require oxygen and 5% become critically ill and need intensive care.
           </p>
           <br>
           <p>
-            People with mild symptoms who are otherwise healthy should manage their symptoms at home.
+            Complications leading to death may include respiratory failure, acute respiratory distress syndrome (ARDS), sepsis and septic shock, thromboembolism, and/or multiorgan failure, including injury of the heart, liver or kidneys.
+          </p>
+          <br>
+          <p>In rare situations, children can develop a severe inflammatory syndrome a few weeks after infection.</p>
+          <br>
+          <h3>What should I do if I have COVID-19 symptoms?</h3>
+          <br>
+          <p>
+            If you have any symptoms suggestive of COVID-19, call your health care provider or COVID-19 hotline for instructions and find out when and where to get a test, stay at home for 14 days away from others and monitor your health.
+          </p>
+          <br>
+          <p>
+            If you have shortness of breath or pain or pressure in the chest, seek medical attention at a health facility immediately. Call your health care provider or hotline in advance for direction to the right health facility.
+          </p>
+          <br>
+          <p>If you live in an area with malaria or dengue fever, seek medical care if you have a fever.</p>
+          <br>
+          <p>
+            If local guidance recommends visiting a medical centre for testing, assessment or isolation, wear a medical mask while travelling to and from the facility and during medical care. Also keep at least a 1-metre distance from other people and avoid touching surfaces with your hands. This applies to adults and children.
           </p>
           <br>
           <h6>For informational purposes only. Consult your local medical authority for advice.</h6>
@@ -167,8 +191,8 @@
           <ul class="d-inline-flex">
             <li><a href="index.html">About Covid-19</a></li>
             <li><a href="transmission.html">Transmission</a></li>
-            <li><a href="#">Prevention</a></li>
-            <li><a href="#">First Aid</a></li>
+            <li><a href="prevention.html">Prevention</a></li>
+            <li><a href="first-aid.html">First Aid</a></li>
             <li><a href="#">Procedures</a></li>
           </ul>
         </div>
