--- a/covid19/transmission.html
+++ b/covid19/transmission.html
@@ -44,10 +44,10 @@
                         <a href="">Transmission</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="#">Prevention</a>
+                        <a href="prevention.html">Prevention</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="#">First Aid</a>
+                        <a href="first-aid.html">First Aid</a>
                       </li>
                       <li class="dropdown-link">
                         <a href="#">Procedures</a>
@@ -108,11 +108,12 @@
           <div class="notes">
             <h1><mark>How COVID-19 virus spreads?</mark></h1>
             <p>
-              Current evidence suggests that transmission of SARS-CoV-2 occurs primarily between people through direct, indirect, or close contact with infected people through infected secretions such as saliva and respiratory secretions, or through their respiratory droplets, which are expelled when an infected person coughs, sneezes, talks or sings.
+              COVID-19 is caused by the SARS-CoV-2 virus, which spreads between people, mainly when an infected person is in close
+              contact with another person.
             </p>
           </div>
           <div class="picture">
-            <img src="img/fever_custom-255ad6067b99013fe8b1173ffdfb0bfc60c8150b-s800-c85.jpg" alt="COVID-19 Virus Symptoms - Photo by npr.org">
+            <img src="img/dreamstime_l_178479768.5f7cbeca40cc5.png" alt="COVID-19 Virus Transmission - Photo by EHS Today">
           </div>
         </div>
       </div>
@@ -120,12 +121,60 @@
       <!-- main section -->
       <main>
         <div class="content">
+          <h3>How does COVID-19 spread between people?</h3>
+          <br>
           <p>
-            The virus that causes COVID-19 is mainly transmitted through droplets generated when an infected person coughs, sneezes, or exhales. These droplets are too heavy to hang in the air, and quickly fall on floors or surfaces.
+            COVID-19 is caused by the SARS-CoV-2 virus, which spreads between people, mainly when an infected person is in close contact with another person.
           </p>
           <br>
           <p>
-            You can be infected by breathing in the virus if you are within close proximity of someone who has COVID-19, or by touching a contaminated surface and then your eyes, nose or mouth.
+            The virus can spread from an infected person’s mouth or nose in small liquid particles when they cough, sneeze, speak, sing or breathe heavily. These liquid particles are different sizes, ranging from larger ‘respiratory droplets’ to smaller ‘aerosols’.
+          </p>
+          <br>
+          <p>
+            Other people can catch COVID-19 when the virus gets into their mouth, nose or eyes, which is more likely to happen when people are in direct or close contact (less than 1 metre apart) with an infected person.
+          </p>
+          <br>
+          <p>
+            Current evidence suggests that the main way the virus spreads is by respiratory droplets among people who are in close contact with each other.
+          </p>
+          <br>
+          <p>
+            Aerosol transmission can occur in specific settings, particularly in indoor, crowded and inadequately ventilated spaces, where infected person(s) spend long periods of time with others, such as restaurants, choir practices, fitness classes, nightclubs, offices and/or places of worship. More studies are underway to better understand the conditions in which aerosol transmission is occurring outside of medical facilities where specific medical procedures, called aerosol generating procedures, are conducted.
+          </p>
+          <br>
+          <p>
+            The virus can also spread after infected people sneeze, cough on, or touch surfaces, or objects, such as tables, doorknobs and handrails. Other people may become infected by touching these contaminated surfaces, then touching their eyes, noses or mouths without having cleaned their hands first.
+          </p>
+          <br>
+          <h3>When do infected people transmit the virus?</h3>
+          <br>
+          <p>Whether or not they have symptoms, infected people can be contagious and the virus can spread from them to other people.</p>
+          <br>
+          <p>
+            Laboratory data suggests that infected people appear to be most infectious just before they develop symptoms (namely 2 days before they develop symptoms) and early in their illness. People who develop severe disease can be infectious for longer.
+          </p>
+          <br>
+          <p>While someone who never develops symptoms can pass the virus to others, it is still not clear how frequently this occurs and more research is needed in this area.</p>
+          <br>
+          <h3>Are there certain settings where COVID-19 can spread more easily?</h3>
+          <br>
+          <p>
+            Any situation in which people are in close proximity to one another for long periods of time increases the risk of transmission. Indoor locations, especially settings where there is poor or no ventilation, are riskier than outdoor
+            locations.
+          </p>
+          <br>
+          <p>Transmission can occur more easily in the “Three C’s”:</p>
+          <ul class="list">
+            <li>Crowded places with many people nearby;</li>
+            <li>Close-contact settings, especially where people have conversations very near each other;</li>
+            <li>Confined and enclosed spaces with poor ventilation.</li>
+          </ul>
+          <br>
+          <p>The risk of COVID-19 spreading is higher in places where these “3Cs” overlap.</p>
+          <br>
+          <p>
+            In health facilities, some medical procedures, called aerosol generating procedures, can produce very small droplets (called ‘droplet nuclei’ or ‘aerosols’) that can stay suspended in the air for longer periods of time. This is why health workers performing these procedures take specific airborne protection measures, including using appropriate personal protective equipment, including respirators, and why visitors are not permitted in areas in which these procedures are being performed.
           </p>
           <br>
           <h6>For informational purposes only. Consult your local medical authority for advice.</h6>
@@ -136,8 +185,8 @@
           <ul class="d-inline-flex">
             <li><a href="index.html">About Covid-19</a></li>
             <li><a href="symptoms.html">Symptoms</a></li>
-            <li><a href="#">Prevention</a></li>
-            <li><a href="#">First Aid</a></li>
+            <li><a href="prevention.html">Prevention</a></li>
+            <li><a href="first-aid.html">First Aid</a></li>
             <li><a href="#">Procedures</a></li>
           </ul>
         </div>
