--- a/covid19/index.html
+++ b/covid19/index.html
@@ -44,10 +44,10 @@
                         <a href="transmission.html">Transmission</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="#">Prevention</a>
+                        <a href="prevention.html">Prevention</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="#">First Aid</a>
+                        <a href="first-aid.html">First Aid</a>
                       </li>
                       <li class="dropdown-link">
                         <a href="#">Procedures</a>
@@ -138,8 +138,8 @@
           <ul class="d-inline-flex">
             <li><a href="symptoms.html">Symptoms</a></li>
             <li><a href="transmission.html">Transmission</a></li>
-            <li><a href="#">Prevention</a></li>
-            <li><a href="#">First Aid</a></li>
+            <li><a href="prevention.html">Prevention</a></li>
+            <li><a href="first-aid.html">First Aid</a></li>
             <li><a href="#">Procedures</a></li>
           </ul>
         </div>
